<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2021 CHH2000day,FGPRC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android='http://schemas.android.com/apk/res/android' >
	
 
<PreferenceCategory
	android:key="General"
	android:summary="General"
	android:title="General">   
	<!--
		//Would be overwritten by the EditText
		
	<EditTextPreference  
        android:dialogTitle="FlightGear IP"  
        android:key="IP"  
        android:defaultValue="127.0.0.1"  
        android:summary="the IP of FlightGear"  
        android:title="FlightGear IP" >  
    </EditTextPreference>  
	<EditTextPreference  
        android:dialogTitle="FlightGear port"  
        android:key="port"  
        android:defaultValue="23333"  
        android:summary="the port of FlightGear"  
        android:title="FlightGear port" >  
    </EditTextPreference>  
	-->
	<CheckBoxPreference
		android:key="isSmoothControl"
		android:summaryOn="@string/smoothcontrol_summary_on"
		android:summaryOff="@string/smoothcontrol_summary_off"
		android:title="@string/smoothcontrol_title"/>    
	<ListPreference  
		android:key="style_type"  
		android:title="@string/yoke_style_title"  
		android:summary="@string/yoke_style_summary"  
		android:entries="@array/style_type"  
		android:entryValues="@array/style_type_values"  
		android:dialogTitle="@string/yoke_style_dialog"  
		android:defaultValue="@string/default_style_type"  
	/>  
	
	
</PreferenceCategory>
</PreferenceScreen>
