<!--
  ~ Copyright 2021 CHH2000day,FGPRC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/calibrate"
		android:title="@string/recalibrate" />
	<item
		android:id="@+id/reconnect"
		android:title="@string/reconnect" />
	<!--
		Disabled this function for some reason
    <item
        android:id="@+id/setting"
        android:title="@string/setting"/>
	-->
	<item
		android:id="@+id/about"
		android:title="@string/about" />
	<item
		android:id="@+id/exit"
		android:title="@string/exit" />

</menu>
